samples/_failures_safe/1761517382_eebd06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6288707b.c: In function ‘main’:
./samples/SAFE/__tmp_6288707b.c:173:15: error: expected ‘)’ at end of input
  173 |     } while (1
      |             ~ ^
      |               )
./samples/SAFE/__tmp_6288707b.c:173:5: error: expected declaration or statement at end of input
  173 |     } while (1
      |     ^
